# general

./: README.md
ai/nlp/rag/: README.md  rag1.ipynb
ai/nlp/rag/templates/: index.html
ai/vision/image/hog-svm/: README.md  hog_svm_classification.ipynb
environ-controller/system/doc/: sw_arch_design.doc  sw_rel_history.doc
environ-controller/system/qa/: ec_system_test_plan.doc  ec_test_report.xlsx  test-setup.vsd
environ-controller/system/qa/mqtt-scripts/: apply_profile  get-general  get-profile  grow-req  grow-stop  readme.txt  set-general  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_1/: grow_cycle_start_request
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_10/: get_profile  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_11/: grow_cycle_start_request  grow_cycle_stop_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_12/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_13/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_14/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_15/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_16/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_17/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_18/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_19/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_2/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_20/: get_profile  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_21/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_22/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_23/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_24/: grow_cycle_stop_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_25/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_26/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_27/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_28/: grow_cycle_start_request  grow_cycle_stop_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_29/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_3/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_30/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_31/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_32/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_33/: get_profile  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_35/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_36/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_37/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_38/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_39/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_4/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_40/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_41/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_42/: get_profile  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_43/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_44/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_45/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_46/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_5/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_6/: set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_7/: get_profile  grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_8/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_circ_1_9/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_hood_vent_1_1/: grow_cycle_start_request  set_profile
environ-controller/system/qa/mqtt-scripts/tc_device_hood_vent_1_10/: get_profile  set_profile  (+1 more)
environ-controller/system/qa/tls-cert/: certificate_usage.txt  generic_client_cert_300.pem  generic_client_key_300.pem  linux_ca_365.pem  linux_ca_key_300.pem  localveggy_ca_365.pem  localveggy_ca_365_key.pem
environ-controller/system/sw/code/cntrl-app/ESP32-S2-MINI/main/: CMakeLists.txt
environ-controller/system/sw/code/sensor-app/ESP32-C3/main/: CMakeLists.txt
environ-controller/tools/: data2c  ec_web_prov_index_page.html
environ-controller/tools/fw-ug/: Makefile  fwug_tool.c
environ-controller/tools/mqtt-client/inc/: osa_linux.h  serial_comport.h
environ-controller/tools/mqtt-client/src/: main.c  serial_comport.c
environ-controller/tools/mqtt-client/test/: Makefile
(+580 files in other folders)
