idf_component_register(SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../src/esp32_s2_main.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/flash.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/trace.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/utility.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/base64.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/spi_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/sd_card.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app_backup.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app_profile.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app_fault.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app_fwug.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/app_provision.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/backup_sram_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/config.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/ctrl_out.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/co2_fuzzy.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/device.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/device_gen.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/device_light.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/device_vent.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/device_wrapper.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/mqtt_com_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/nvds.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/nw_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/osa.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/profile.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/rtc_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/smtp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/adc_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/web_provision.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/modbus_master_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_access.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_cache.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_filelib.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_format.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_misc.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_string.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_table.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/fat_write.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../test/test_ctrl_out.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../test/test.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/sensor.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../test/test_spi.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../test/test_sd_card.c"
                       INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/inc/"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../../inc/"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../../fat_io_lib/release/"
                                    "${IDF_PATH}/components/driver/include/esp_private/"
                                    "${IDF_PATH}/components/driver/include/driver/"
                                    "${IDF_PATH}/components/spi_flash/include/"
                                    "${IDF_PATH}/components/bt/common/osi/include/"
                                    "${IDF_PATH}/components/esp_adc_cal/include/"
                                    "${IDF_PATH}/components/app_update/include/"
                                    "${IDF_PATH}/components/lwip/lwip/src/include/" 
				                    "${IDF_PATH}/components/esp_wifi/include/"
                                    "${IDF_PATH}/components/nvs_flash/include/"
                                    "${IDF_PATH}/components/mqtt/esp-mqtt/include/"
                                    "${IDF_PATH}/components/freertos/include/freertos/"
                       )

target_compile_options(${COMPONENT_LIB} PRIVATE -w -DPS_USE_TRACE -DESP32_S2_MINI -DFREERTOS_KERNEL)

