idf_component_register(SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../src/esp32_c3_main.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/flash.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/trace.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/utility.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/src/base64.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/sensor_app.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/modbus_slave_esp.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../src/sensor.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../test/test_sensor.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../sensiron-scd4x/src/scd4x_i2c.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../sensiron-scd4x/src/sensirion_i2c.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../sensiron-scd4x/src/sensirion_common.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../sensiron-scd4x/src/sensirion_i2c_hal.c"
                            "${CMAKE_CURRENT_SOURCE_DIR}/../../../cntrl-app/src/osa.c"
                       INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/../../../common/inc/"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../../../cntrl-app/inc/"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../../inc/"
                                    "${CMAKE_CURRENT_SOURCE_DIR}/../../sensiron-scd4x/inc"
                                    "${IDF_PATH}/components/driver/include/esp_private/"
                                    "${IDF_PATH}/components/driver/include/driver/"
                                    "${IDF_PATH}/components/spi_flash/include/"
                                    "${IDF_PATH}/components/bt/common/osi/include/"
                                    "${IDF_PATH}/components/esp_adc_cal/include/"
                                    "${IDF_PATH}/components/app_update/include/"
                                    "${IDF_PATH}/components/lwip/lwip/src/include/" 
				                    "${IDF_PATH}/components/esp_wifi/include/"
                                    "${IDF_PATH}/components/nvs_flash/include/"
                                    "${IDF_PATH}/components/mqtt/esp-mqtt/include/"
                                    "${IDF_PATH}/components/freertos/include/freertos/"
                                    "${IDF_PATH}/components/hal/include/hal/"
                       )

target_compile_options(${COMPONENT_LIB} PRIVATE -w -DPS_USE_TRACE -DESP32_S2_MINI -DFREERTOS_KERNEL  -DESP32_C3)

